# vcl-messaging

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
vcl_messaging/: hooks.py  modules.txt
vcl_messaging/fixtures/: custom_field.json
vcl_messaging/vcl_messaging/: allocator.py  api.py  email_api.py  followups_api.py  slack_api.py  whatsapp_api.py  whatsapp_pa_api.py
vcl_messaging/vcl_messaging/doctype/vcl_channel_config/: vcl_channel_config.json  vcl_channel_config.py
vcl_messaging/vcl_messaging/doctype/vcl_conversation/: vcl_conversation.json  vcl_conversation.py
vcl_messaging/vcl_messaging/doctype/vcl_followup/: vcl_followup.json  vcl_followup.py
vcl_messaging/vcl_messaging/doctype/vcl_inbox_tag/: vcl_inbox_tag.json  vcl_inbox_tag.py
vcl_messaging/vcl_messaging/doctype/vcl_message/: vcl_message.json  vcl_message.py
vcl_messaging/vcl_messaging/doctype/vcl_message_contact/: vcl_message_contact.json  vcl_message_contact.py
web_inbox/: cleanup_test_messages.py  deploy_webpage.py  inbox.css  inbox.html  inbox.js
web_inbox/mockups/: deploy_mockups.py  mock.html  mock.js  theme-console.css  theme-daylight.css  theme-paper.css
